--- a/nav_settings.json
+++ b/nav_settings.json
@@ -3,12 +3,12 @@
 	"Cameras": {
 		"Right":{
 			"Config":"PI2_STD_HQ_CROPPED_0",
-			"DefaultHeading":180.0,
-			"Enabled":false
+			"DefaultHeading":143.5,
+			"Enabled":true
 		},
 		"Left":{
 			"Config":"PI2_STD_HQ_CROPPED_1",
-			"DefaultHeading":0.0,
+			"DefaultHeading":36.5,
 			"Enabled":true
 		}
 	},
@@ -42,7 +42,7 @@
 				    "model":"lights",
 				    "x":26,
 				    "y":132,
-				    "height":43.5,
+				    "height":43,
 				    "altitude":40,
 		                    "confidence":0.25
 				},
@@ -56,12 +56,22 @@
 				    "altitude":29,
 		                    "confidence":0.25
 				},
+				"nw_light": {
+				    "pattern":"4",
+				    "type":"light",
+				    "model":"lights",
+				    "x":-112,
+				    "y":130,
+				    "height":42,
+				    "altitude":21,
+		                    "confidence":0.25
+				},
 				"w_tree": {
 				    "pattern":"na",
 				    "type":"cat_tree",
 				    "model":"basement",
-				    "x":-100,
-				    "y":-50,
+				    "x":-93,
+				    "y":-52,
 				    "height":24.5,
 				    "altitude":12.25,
 		                    "confidence":0.6
@@ -71,17 +81,17 @@
 				    "type":"cone",
 				    "model":"basement",
 				    "x":-57,
-				    "y":0,
+				    "y":90,
 				    "height":24.5,
 				    "altitude":12.25,
-		                    "confidence":0.6
+		                    "confidence":0.25
 				},
 				"w_house": {
 				    "pattern":"na",
 				    "type":"house",
 				    "model":"basement",
-				    "x":-86,
-				    "y":0,
+				    "x":-57,
+				    "y":1,
 				    "height":7.75,
 				    "altitude":3.875,
 		                    "confidence":0.6
@@ -91,10 +101,20 @@
 				    "type":"gazing_ball",
 				    "model":"basement",
 				    "x":72,
-				    "y":0,
-				    "height":10.5,
-				    "altitude":5.25,
+				    "y":1,
+				    "height":10.25,
+				    "altitude":5.125,
 		                    "confidence":0.6
+				},
+				"c_windmill": {
+				    "pattern":"na",
+				    "type":"windmill",
+				    "model":"basement",
+				    "x":-25,
+				    "y":1,
+				    "height":11.75,
+				    "altitude":5.875,
+		                    "confidence":0.4
 				}
 			}
 		}
