--- a/pi_cm4/nav_settings.json
+++ b/pi_cm4/nav_settings.json
@@ -27,24 +27,48 @@
 		}
 	},
 	"Maps": {
-		"Basement": {
-			"Shape":"rectangle",
-			"Boundaries": {
-				"xmin":-50,
-				"ymin":-150,
-				"xmax":100,
-				"ymax":0
-			},
-			"Landmarks": {
-				"n_light": {
-				    "pattern":"3",
-				    "type":"light",
-				    "model":"lights",
-				    "x":26,
+		"Basement": 
+			{
+			    "Landmarks": {
+				"w_windmill": {
+				    "pattern":"na",
+				    "type":"gazing_ball",
+				    "model":"basement",
+				    "x":-132,
+				    "y":0,
+				    "height":12.0,
+				    "altitude":6.0,
+				    "confidence":0.6
+				},
+				"ne_tree": {
+				    "pattern":"na",
+				    "type":"cat_tree",
+				    "model":"basement",
+				    "x":80,
+				    "y":100,
+				    "height":24.5,
+				    "altitude":12.25,
+				    "confidence":0.6
+				},
+				"n_pineapple": {
+				    "pattern":"na",
+				    "type":"pineapple",
+				    "model":"basement",
+				    "x":0,
 				    "y":132,
-				    "height":43,
-				    "altitude":40,
-		                    "confidence":0.25
+				    "height":14.0,
+				    "altitude":7.0,
+				    "confidence":0.6
+				},   
+				"nw_house": {
+				    "pattern":"na",
+				    "type":"house",
+				    "model":"basement",
+				    "x":-70,
+				    "y":65,
+				    "height":7.75,
+				    "altitude":3.875,
+				    "confidence":0.6
 				},
 				"e_light": {
 				    "pattern":"2",
@@ -54,7 +78,7 @@
 				    "y":-28,
 				    "height":11,
 				    "altitude":29,
-		                    "confidence":0.25
+				    "confidence":0.25
 				},
 				"nw_light": {
 				    "pattern":"4",
@@ -64,59 +88,26 @@
 				    "y":130,
 				    "height":42,
 				    "altitude":21,
-		                    "confidence":0.25
-				},
-				"w_tree": {
-				    "pattern":"na",
-				    "type":"cat_tree",
-				    "model":"basement",
-				    "x":-93,
-				    "y":-52,
-				    "height":24.5,
-				    "altitude":12.25,
-		                    "confidence":0.6
-				},
-				"w_cone": {
-				    "pattern":"na",
-				    "type":"cone",
-				    "model":"basement",
-				    "x":-57,
-				    "y":90,
-				    "height":24.5,
-				    "altitude":12.25,
-		                    "confidence":0.25
-				},
-				"w_house": {
-				    "pattern":"na",
-				    "type":"house",
-				    "model":"basement",
-				    "x":-57,
-				    "y":1,
-				    "height":7.75,
-				    "altitude":3.875,
-		                    "confidence":0.6
-				},
+				    "confidence":0.25
+				},                
 				"e_ball": {
 				    "pattern":"na",
 				    "type":"gazing_ball",
 				    "model":"basement",
 				    "x":72,
 				    "y":1,
-				    "height":10.25,
-				    "altitude":5.125,
-		                    "confidence":0.6
-				},
-				"c_windmill": {
-				    "pattern":"na",
-				    "type":"windmill",
-				    "model":"basement",
-				    "x":-25,
-				    "y":1,
-				    "height":11.75,
-				    "altitude":5.875,
-		                    "confidence":0.4
+				    "height":10.5,
+				    "altitude":5.25,
+				    "confidence":0.6
 				}
+			    },
+			    "Shape":"rectangle",
+			    "Boundaries" : {
+				"xmin":-150,
+				"ymin":-150,
+				"xmax":200,
+				"ymax":200
+			    }
 			}
-		}
 	}
 }
