--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -1,6 +1,8 @@
 {
 	"Vehicle":"MecCar",
 	"NavServiceUrls":["http://localhost:8000","http://10.0.0.122:8000"],
+	"LidarEnabledPositioning":true,
+	"LidarEnabledSearch":true,
 	"XXX_Altitude":10.5,
 	"Altitude":35.0,
 	"CacheLocations" : {
@@ -12,12 +14,14 @@
 		"Right":{
 			"Config":"PI3_STD_HQ_CROPPED_1",
 			"DefaultHeading":123.0,
-			"Enabled":true
+			"Enabled":true,
+			"VehicleBaseId":1
 		},
 		"Left":{
 			"Config":"PI3_STD_HQ_CROPPED_0",
 			"DefaultHeading":57.0,
-			"Enabled":true
+			"Enabled":true,
+			"VehicleBaseId":0
 		}
 	}
 }
