--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -3,8 +3,8 @@
 	"NavServiceUrls":["http://localhost:8000","http://10.0.0.122:8000"],
 	"LidarEnabledPositioning":true,
 	"LidarEnabledSearch":true,
-	"XXX_Altitude":10.5,
-	"Altitude":35.0,
+	"Altitude":10.5,
+	"XXX_Altitude":35.0,
 	"CacheLocations" : {
 		"Maps":"/home/matt/projects/pilot_cache/maps",
 		"Models":"/home/matt/projects/pilot_cache/models",
@@ -14,12 +14,14 @@
 		"Right":{
 			"Config":"PI3_STD_HQ_CROPPED_1",
 			"DefaultHeading":123.0,
+			"AlternateHeadings":[100.0,180.0,230.0],
 			"Enabled":true,
 			"VehicleBaseId":1
 		},
 		"Left":{
 			"Config":"PI3_STD_HQ_CROPPED_0",
 			"DefaultHeading":57.0,
+			"AlternateHeadings":[80.0,0.0,-50.0],
 			"Enabled":true,
 			"VehicleBaseId":0
 		}
