--- a/jetson_nano/pilot_settings.json
+++ b/jetson_nano/pilot_settings.json
@@ -1,14 +1,13 @@
 {
-	"Vehicle":"MecCar",
-	"Platform":"Pi CM4",
-	"NavServiceUrls":["http://localhost:8000","http://10.0.0.122:8000"],
+	"Vehicle":"Observer",
+	"Platform":"Jetson Nano",
+	"NavServiceUrls":["http://192.168.0.100:8000","http://10.0.0.122:8000"],
 	"LidarEnabledPositioning":true,
 	"LidarEnabledSearch":true,
-	"Altitude":10.5,
-	"MultithreadedPositioning":true,
+	"Altitude":44.0,
+	"MultithreadedPositioning":false,
 	"EstimatorMode":"VERY_PRECISE",
-	"MinObjectConfidence":0.25,
-	"XXX_Altitude":35.0,
+	"MinObjectConfidence":0.2,
 	"CacheLocations" : {
 		"Maps":"/home/matt/projects/pilot_cache/maps",
 		"Models":"/home/matt/projects/pilot_cache/models",
@@ -16,18 +15,16 @@
 	},
 	"Cameras": {
 		"Right":{
-			"Config":"PI3_STD_HQ_CROPPED_1",
+			"Config":"PI2_STD_HQ_CROPPED_0",
 			"DefaultHeading":123.0,
-			"AlternateHeadings":[100.0,180.0,230.0],
-			"Enabled":true,
-			"VehicleBaseId":1
-		},
-		"Left":{
-			"Config":"PI3_STD_HQ_CROPPED_0",
-			"DefaultHeading":57.0,
-			"AlternateHeadings":[80.0,0.0,-50.0],
 			"Enabled":true,
 			"VehicleBaseId":0
+		},
+		"Left":{
+			"Config":"PI2_STD_HQ_CROPPED_1",
+			"DefaultHeading":57.0,
+			"Enabled":true,
+			"VehicleBaseId":1
 		}
 	}
 }
