--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -6,7 +6,8 @@
 	"LidarEnabledSearch":true,
 	"Altitude":10.5,
 	"MultithreadedPositioning":true,
-	"EstimatorMode":"VERY_PRECISE",
+	"xEstimatorMode":"VERY_PRECISE",
+	"EstimatorMode":"PRECISE",
 	"MinObjectConfidence":0.2,
 	"XXX_Altitude":35.0,
 	"CacheLocations" : {
