--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -8,6 +8,7 @@
 	"MultithreadedPositioning":true,
 	"xEstimatorMode":"VERY_PRECISE",
 	"EstimatorMode":"PRECISE",
+	"SmoothingCyclesPerImage":3,
 	"MinObjectConfidence":0.2,
 	"XXX_Altitude":35.0,
 	"CacheLocations" : {
