--- a/jetson_nano/pilot_settings.json
+++ b/jetson_nano/pilot_settings.json
@@ -9,6 +9,8 @@
 	"EstimatorMode":"PRECISE",
 	"SmoothingCyclesPerImage":3,
 	"MinObjectConfidence":0.2,
+	"SavePositioningImages":true,
+	"SaveEmptyPositioningImages":true,
 	"CacheLocations" : {
 		"Maps":"/home/matt/projects/pilot_cache/maps",
 		"Models":"/home/matt/projects/pilot_cache/models",
