--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -10,6 +10,8 @@
 	"EstimatorMode":"PRECISE",
 	"SmoothingCyclesPerImage":3,
 	"MinObjectConfidence":0.2,
+	"SavePositioningImages":true,
+	"SaveEmptyPositioningImages":true,
 	"XXX_Altitude":35.0,
 	"CacheLocations" : {
 		"Maps":"/home/matt/projects/pilot_cache/maps",
