--- a/jetson_nano/pilot_settings.json
+++ b/jetson_nano/pilot_settings.json
@@ -4,6 +4,8 @@
 	"NavServiceUrls":["http://192.168.0.100:8000","http://10.0.0.122:8000"],
 	"LidarEnabledPositioning":true,
 	"LidarEnabledSearch":true,
+	"LidarMaxDriftDegrees":1.5,
+	"LidarMaxVisualDistVariancePct": 0.33,
 	"Altitude":44.0,
 	"MultithreadedPositioning":true,
 	"EstimatorMode":"PRECISE",
