--- a/jetson_nano/pilot_settings.json
+++ b/jetson_nano/pilot_settings.json
@@ -2,8 +2,8 @@
 	"Vehicle":"Observer",
 	"Platform":"Jetson Nano",
 	"NavServiceUrls":["http://192.168.0.100:8000","http://10.0.0.122:8000"],
-	"LidarEnabledPositioning":true,
-	"LidarEnabledSearch":true,
+	"LidarEnabledPositioning":false,
+	"LidarEnabledSearch":false,
 	"LidarMaxDriftDegrees":1.5,
 	"LidarMaxVisualDistVariancePct": 0.33,
 	"Altitude":19.0,
