configure max lidar age

--- a/jetson_nano/pilot_settings.json
+++ b/jetson_nano/pilot_settings.json
@@ -6,6 +6,7 @@
 	"LidarEnabledSearch":true,
 	"LidarMaxDriftDegrees":1.5,
 	"LidarMaxVisualDistVariancePct": 0.33,
+	"LidarMaxAge":1.0,
 	"Altitude":19.0,
 	"MultithreadedPositioning":true,
 	"EstimatorMode":"PRECISE",
