add positioin failure logs

--- a/jetson_nano/pilot_settings.json
+++ b/jetson_nano/pilot_settings.json
@@ -13,7 +13,9 @@
 	"SmoothingCyclesPerImage":3,
 	"MinObjectConfidence":0.2,
 	"SavePositioningImages":true,
-	"SaveEmptyPositioningImages":true,
+	"SaveEmptyPositioningImages":false,
+	"LogPositionFailures":true,
+	"LogDirectory":"/home/projects/matt/pilot_cache/logs",
 	"CacheLocations" : {
 		"Maps":"/home/matt/projects/pilot_cache/maps",
 		"Models":"/home/matt/projects/pilot_cache/models",
