--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -8,9 +8,10 @@
 	"LidarMaxVisualDistVariancePct": 0.33,
 	"LidarMaxAge":30.0,
 	"Altitude":10.5,
+	"AdjustForAltitude":false,
 	"MultithreadedPositioning":true,
-	"xEstimatorMode":"VERY_PRECISE",
-	"EstimatorMode":"PRECISE",
+	"EstimatorMode":"VERY_PRECISE",
+	"xEstimatorMode":"PRECISE",
 	"SmoothingCyclesPerImage":3,
 	"MinObjectConfidence":0.2,
 	"SavePositioningImages":true,
