--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -3,6 +3,7 @@
 	"Platform":"Pi CM4",
 	"NavServiceUrls":["http://localhost:8000","http://10.0.0.122:8000"],
 	"Altitude":10.5,
+	"LogDirectory":"/home/matt/projects/pilot_cache/logs",
 	"Lidar": {
 		"EnabledPositioning":true,
 		"EnabledSearch":true,
@@ -14,8 +15,8 @@
 		"Minimum":2,
 		"Preferred":4,
 		"Tiers": {
-			"1": {
-				"Preferred":4,
+			"top": {
+				"Preferred":3,
 				"Minimum":1
 			}
 		},
@@ -45,14 +46,14 @@
 		"Right":{
 			"Config":"PI3_STD_HQ_CROPPED_1",
 			"DefaultHeading":123.0,
-			"AlternateHeadings":[100.0,180.0,230.0],
+			"AlternateHeadings":[180.0,230.0,100.0],
 			"Enabled":true,
 			"VehicleBaseId":1
 		},
 		"Left":{
 			"Config":"PI3_STD_HQ_CROPPED_0",
 			"DefaultHeading":57.0,
-			"AlternateHeadings":[80.0,0.0,-50.0],
+			"AlternateHeadings":[0.0,-50.0,80.0],
 			"Enabled":true,
 			"VehicleBaseId":0
 		}
