--- a/jetson_nano/pilot_settings.json
+++ b/jetson_nano/pilot_settings.json
@@ -24,7 +24,8 @@
 			"SmoothingCyclesPerImage":3,
 			"MinObjectConfidence":0.2,
 			"SavePositioningImages":true,
-			"SaveEmptyPositioningImages":false
+			"SaveEmptyPositioningImages":false,
+			"Multithreaded":true
 		}
 	},
 	"Positioning": {
