--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -30,7 +30,8 @@
 			"SmoothingCyclesPerImage":3,
 			"MinObjectConfidence":0.2,
 			"SavePositioningImages":true,
-			"SaveEmptyPositioningImages":false
+			"SaveEmptyPositioningImages":false,
+			"Multithreaded":true
 		}
 	},
 	"Positioning": {
