multithread object detection

--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -29,7 +29,7 @@
 		"Detection": {
 			"SmoothingCyclesPerImage":3,
 			"MinObjectConfidence":0.2,
-			"SavePositioningImages":true,
+			"SavePositioningImages":false,
 			"SaveEmptyPositioningImages":false,
 			"Multithreaded":true
 		}
