--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -15,7 +15,7 @@
 		"EnabledSearch":true,
 		"MaxDriftDegrees":1.5,
 		"MaxVisualDistVariancePct": 0.33,
-		"MaxAge":1.0
+		"MaxAge":10.0
 	},
 	"Landmarks": {
 		"Minimum":2,
@@ -31,7 +31,9 @@
 			"MinObjectConfidence":0.2,
 			"SavePositioningImages":false,
 			"SaveEmptyPositioningImages":false,
-			"Multithreaded":true
+			"SaveSearchImages":true,
+			"MultithreadedPositioning":true,
+			"MultithreadedSearch":false
 		}
 	},
 	"Positioning": {
