--- a/jetson_nano/pilot_settings.json
+++ b/jetson_nano/pilot_settings.json
@@ -4,7 +4,7 @@
 	"NavServiceUrls":["http://192.168.0.100:8000","http://10.0.0.122:8000"],
 	"Altitude":19.0,
 	"LogDirectory":"/home/matt/projects/pilot_cache/logs",
-	"Vehicle" {
+	"Vehicle": {
 		"Height":20.0,
 		"Width":16.5,
 		"Length":11.0
