--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -4,7 +4,7 @@
 	"NavServiceUrls":["http://localhost:8000","http://10.0.0.122:8000"],
 	"Altitude":10.5,
 	"LogDirectory":"/home/matt/projects/pilot_cache/logs",
-	"Vehicle": {
+	"VehicleShape": {
 		"Height":15.0,
 		"Width":12.0,
 		"Length":20.0
