--- a/pi_cm4/pilot_settings.json
+++ b/pi_cm4/pilot_settings.json
@@ -12,11 +12,12 @@
 	"Driving": {
 		"MaxDistancePerLeg":0.5,
 		"MaxLegAttempts":5,
-		"GoCloseEnough":20.0,
+		"GoCloseEnough":30.0,
 		"GoMaxLegs":15,
 		"GoSpeed":6.0,
 		"RotationMaxAttempts":10,
 		"RotationDegreeAllowance":9.0,
+		"RecheckAfterRotation":false,
 		"MaxPositioningAdjustments":3,
 		"PreferredPositionConfidence":"medium"
 	},
@@ -24,7 +25,7 @@
 		"EnabledPositioning":true,
 		"EnabledSearch":true,
 		"MaxDriftDegrees":1.5,
-		"MaxVisualDistVariancePct": 0.33,
+		"MaxVisualDistVariancePct": 0.2,
 		"MaxAge":10.0
 	},
 	"Landmarks": {
